Broad structure setup

--- a/scss/stylesheet.scss
+++ b/scss/stylesheet.scss
@@ -41,3 +41,21 @@
     -moz-flex-wrap: $wrap;
     flex-wrap: $wrap;
 }
+
+/* styles for andrea's portfolio */
+
+.portfolio-nav {
+
+}
+
+.portfolio-row {
+
+}
+
+.portfolio-about {
+
+}
+
+.portfolio-footer {
+
+}
