--- a/scss/stylesheet.scss
+++ b/scss/stylesheet.scss
@@ -44,16 +44,54 @@
 
 /* styles for andrea's portfolio */
 
-.portfolio-nav {
+.portfolio {
+    @include flex;
+    @include flex-direction(column);
+    line-height: 1.5;
+    font-size: 16px;
+}
 
+.portfolio-nav {
+    @include flex;
+    @include flex-direction(row);
+    @include flex-justify-content(space-between);
+    border-bottom: solid 2px #000000;
+    padding: 2.5% 5%;
+    .portfolio-nav-link {
+        margin: 0 25px;
+    }
 }
 
 .portfolio-row {
-
+    @include flex;
+    @include flex-direction(row);
+    @include flex-justify-content(center);
+    @include flex-wrap(wrap);
+    margin: 5%;
+    .portfolio-icon {
+        border: 2px solid #000000;
+        height: 300px;
+        margin: 1.5%;
+        width: 300px;
+    }
 }
 
 .portfolio-about {
+    @include flex;
+    @include flex-direction(column);
+    @include flex-align-items(center);
+    padding: 3% 5%;
+    .portfolio-about-title {
+        margin-bottom: 2%;
+    }
+    .portfolio-about-blurb {
+        max-width: 900px;
+        text-align: center;
+        margin-bottom: 2%;
+    }
+    .portfolio-about-download-cv {
 
+    }
 }
 
 .portfolio-footer {
