--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -53,6 +53,8 @@
     height: 300px;
     margin: 1.5%;
     width: 300px; }
+  .portfolio-row .portfolio-icon-image {
+    width: 300px; }
 
 .portfolio-about {
   display: -ms-flexbox;
