--- a/scss/stylesheet.scss
+++ b/scss/stylesheet.scss
@@ -74,6 +74,9 @@
         margin: 1.5%;
         width: 300px;
     }
+    .portfolio-icon-image {
+        width: 300px;
+    }
 }
 
 .portfolio-about {
