--- a/scss/stylesheet.scss
+++ b/scss/stylesheet.scss
@@ -48,6 +48,7 @@
     @include flex;
     @include flex-direction(column);
     line-height: 1.5;
+    font-family: 'Roboto', sans-serif;
     font-size: 16px;
 }
 
@@ -55,10 +56,21 @@
     @include flex;
     @include flex-direction(row);
     @include flex-justify-content(space-between);
-    border-bottom: solid 2px #000000;
+    border-bottom: solid 2px #ff008c;
     padding: 2.5% 5%;
+    .portfolio-nav-name {
+        font-size: 24px;
+        font-weight: 700;
+    }
     .portfolio-nav-link {
+        border-bottom: none;
+        transition: ease-out 0.5s;
+        color: #000000;
         margin: 0 25px;
+        &:hover {
+            border-bottom: solid 6px #ff008c;
+            color: #ff008c;
+        }
     }
 }
 
@@ -72,11 +84,32 @@
         border: 2px solid #000000;
         height: 300px;
         margin: 1.5%;
+        position: relative;
+        transition: ease-out 0.5s;
         width: 300px;
+        .portfolio-icon-image {
+            opacity: 1;
+            transition: ease-out 0.5s;
+            width: 300px;
+        }
+        .portfolio-icon-title {
+            bottom: 114px;
+            color: #000000;
+            font-size: 24px;
+            font-weight: 700;
+            opacity: 0;
+            position: absolute;
+            text-align: center;
+            transition: ease-out 0.5s;
+            width: 100%;
+        }
+        &:hover {
+            border-color: #ff008c;
+            .portfolio-icon-image {opacity: 0.2;}
+            .portfolio-icon-title {opacity: 1;}
+        }
     }
-    .portfolio-icon-image {
-        width: 300px;
-    }
+
 }
 
 .portfolio-about {
