--- a/scss/stylesheet.scss
+++ b/scss/stylesheet.scss
@@ -47,27 +47,56 @@
 .portfolio {
     @include flex;
     @include flex-direction(column);
+    color: #1f1f1f;
     line-height: 1.5;
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
 }
-
 .portfolio-nav {
     @include flex;
+    @include flex-align-items(flex-end);
     @include flex-direction(row);
     @include flex-justify-content(space-between);
     border-bottom: solid 2px #ff008c;
-    padding: 2.5% 5%;
+    padding: 5% 5%;
+    position: relative;
+    &:after {
+        content: "";
+        background: url('../images/graffiti-alley.jpg') no-repeat left;
+        background-size: cover;
+        opacity: 0.4;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        position: absolute;
+        z-index: -1;
+    }
+    .portfolio-nav-left-side {
+        @include flex;
+        @include flex-direction(column);
+    }
     .portfolio-nav-name {
-        font-size: 24px;
+        color: #1f1f1f;
+        font-size: 40px;
         font-weight: 700;
+        margin-bottom: 2%;
+        text-shadow: 0px 0px 10px #ffffff;
+    }
+    .portfolio-nav-title {
+        width: 445px;
     }
     .portfolio-nav-link {
+        background-color: rgba(255, 255, 255, 0.6);
         border-bottom: none;
-        transition: ease-out 0.5s;
-        color: #000000;
+        transition: ease-out 0.3s;
+        color: #1f1f1f;
+        font-size: 20px;
+        font-weight: 700;
         margin: 0 25px;
+        padding: 7px;
         &:hover {
+            background-color: rgba(255, 255, 255, 0.8);
             border-bottom: solid 6px #ff008c;
             color: #ff008c;
         }
@@ -79,9 +108,9 @@
     @include flex-direction(row);
     @include flex-justify-content(center);
     @include flex-wrap(wrap);
-    margin: 5%;
+    margin: 7%;
     .portfolio-icon {
-        border: 2px solid #000000;
+        border: 2px solid #1f1f1f;
         height: 300px;
         margin: 1.5%;
         position: relative;
@@ -89,18 +118,18 @@
         width: 300px;
         .portfolio-icon-image {
             opacity: 1;
-            transition: ease-out 0.5s;
+            transition: ease-out 0.3s;
             width: 300px;
         }
         .portfolio-icon-title {
             bottom: 114px;
-            color: #000000;
+            color: #1f1f1f;
             font-size: 24px;
             font-weight: 700;
             opacity: 0;
             position: absolute;
             text-align: center;
-            transition: ease-out 0.5s;
+            transition: ease-out 0.3s;
             width: 100%;
         }
         &:hover {
