--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -95,11 +95,15 @@
   flex-wrap: wrap;
   margin: 7%; }
   .portfolio-row .portfolio-icon {
+    background-color: #ffffff;
+    padding: 0;
+    box-sizing: content-box;
     border: 2px solid #1f1f1f;
+    cursor: pointer;
     height: 300px;
     margin: 1.5%;
     position: relative;
-    transition: ease-out 0.5s;
+    transition: ease-out 0.3s;
     width: 300px; }
     .portfolio-row .portfolio-icon .portfolio-icon-image {
       opacity: 1;
@@ -122,6 +126,105 @@
       .portfolio-row .portfolio-icon:hover .portfolio-icon-title {
         opacity: 1; }
 
+.portfolio-modal {
+  animation-duration: 0.4s;
+  animation-name: fadeIn;
+  background-color: rgba(255, 255, 255, 0.8);
+  display: none;
+  height: 100%;
+  left: 0;
+  overflow: scroll;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1; }
+  .portfolio-modal .portfolio-modal-content {
+    animation-duration: 0.4s;
+    animation-name: slideIn;
+    background-color: #ffffff;
+    bottom: 0;
+    border: 2px solid #1f1f1f;
+    height: 100%;
+    left: 0;
+    max-width: 600px;
+    position: fixed; }
+  .portfolio-modal .portfolio-modal-header {
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: flex;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    -moz-flex-direction: row;
+    flex-direction: row;
+    -webkit-align-items: center;
+    -ms-align-items: center;
+    -moz-align-items: center;
+    align-items: center;
+    -webkit-justify-content: space-between;
+    -ms-justify-content: space-between;
+    -moz-justify-content: space-between;
+    justify-content: space-between;
+    background-color: #1f1f1f;
+    color: #eaeaea;
+    font-size: 20px;
+    font-weight: 700;
+    padding: 10px 25px; }
+  .portfolio-modal .portfolio-modal-close-icon {
+    color: #ffffff;
+    font-size: 24px;
+    font-weight: bold;
+    transition: ease-out 0.3s; }
+    .portfolio-modal .portfolio-modal-close-icon:hover {
+      color: #ff008c;
+      text-decoration: none;
+      cursor: pointer; }
+  .portfolio-modal .portfolio-modal-body {
+    padding: 25px; }
+  .portfolio-modal .portfolio-modal-gif {
+    border: 2px solid #1f1f1f;
+    margin-bottom: 15px; }
+  .portfolio-modal .portfolio-modal-paragraph {
+    font-size: 14px;
+    margin-bottom: 15px; }
+  .portfolio-modal .portfolio-modal-link {
+    border-bottom: 2px solid #1f1f1f;
+    color: #1f1f1f;
+    font-size: 16px;
+    margin: 0 10px 10px 0;
+    transition: ease-out 0.3s;
+    width: 168px; }
+    .portfolio-modal .portfolio-modal-link:last-of-type {
+      width: 235px; }
+    .portfolio-modal .portfolio-modal-link:hover {
+      border-bottom: 6px solid #ff008c;
+      color: #ff008c; }
+
+/* Add Animation */
+@-webkit-keyframes slideIn {
+  from {
+    left: -300px;
+    opacity: 0; }
+  to {
+    left: 0;
+    opacity: 1; } }
+@keyframes slideIn {
+  from {
+    left: -300px;
+    opacity: 0; }
+  to {
+    left: 0;
+    opacity: 1; } }
+@-webkit-keyframes fadeIn {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
+@keyframes fadeIn {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
 .portfolio-footer {
   display: -ms-flexbox;
   display: -webkit-flex;
