Content/style changes to footer

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -255,12 +255,14 @@
     -moz-flex-direction: column;
     flex-direction: column;
     color: #eaeaea;
-    max-width: 660px; }
+    max-width: 645px; }
   .portfolio-footer .portfolio-footer-about-title {
     color: #ff008c;
     font-size: 30px;
     font-weight: 700;
     margin-bottom: 20px; }
+  .portfolio-footer .portfolio-footer-about-blurb {
+    padding-bottom: 15px; }
   .portfolio-footer .portfolio-footer-download-cv {
     border-bottom: solid 1px #ffffff;
     color: #ffffff;
