--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -10,9 +10,9 @@
   -moz-flex-direction: column;
   flex-direction: column;
   color: #1f1f1f;
-  line-height: 1.5;
   font-family: 'Roboto', sans-serif;
-  font-size: 16px; }
+  font-size: 16px;
+  line-height: 1.5; }
 
 .portfolio-nav {
   display: -ms-flexbox;
@@ -35,15 +35,15 @@
   padding: 5% 5%;
   position: relative; }
   .portfolio-nav:after {
-    content: "";
     background: url("../images/graffiti-alley.jpg") no-repeat left;
     background-size: cover;
-    opacity: 0.4;
-    top: 0;
-    left: 0;
     bottom: 0;
-    right: 0;
+    content: "";
+    left: 0;
+    opacity: 0.4;
     position: absolute;
+    right: 0;
+    top: 0;
     z-index: -1; }
   .portfolio-nav .portfolio-nav-left-side {
     display: -ms-flexbox;
@@ -65,12 +65,12 @@
   .portfolio-nav .portfolio-nav-link {
     background-color: rgba(255, 255, 255, 0.6);
     border-bottom: none;
-    transition: ease-out 0.3s;
     color: #1f1f1f;
     font-size: 20px;
     font-weight: 700;
     margin: 0 25px;
-    padding: 7px; }
+    padding: 7px;
+    transition: ease-out 0.3s; }
     .portfolio-nav .portfolio-nav-link:hover {
       background-color: rgba(255, 255, 255, 0.8);
       border-bottom: solid 6px #ff008c;
@@ -96,12 +96,12 @@
   margin: 7%; }
   .portfolio-row .portfolio-icon {
     background-color: #ffffff;
-    padding: 0;
-    box-sizing: content-box;
     border: 2px solid #1f1f1f;
+    box-sizing: content-box;
     cursor: pointer;
     height: 300px;
     margin: 1.5%;
+    padding: 0;
     position: relative;
     transition: ease-out 0.3s;
     width: 300px; }
@@ -177,8 +177,8 @@
     transition: ease-out 0.3s; }
     .portfolio-modal .portfolio-modal-close-icon:hover {
       color: #ff008c;
-      text-decoration: none;
-      cursor: pointer; }
+      cursor: pointer;
+      text-decoration: none; }
   .portfolio-modal .portfolio-modal-body {
     padding: 25px; }
   .portfolio-modal .portfolio-modal-gif {
@@ -200,24 +200,12 @@
       border-bottom: 6px solid #ff008c;
       color: #ff008c; }
 
-@-webkit-keyframes slideIn {
-  from {
-    left: -300px;
-    opacity: 0; }
-  to {
-    left: 0;
-    opacity: 1; } }
 @keyframes slideIn {
   from {
     left: -300px;
     opacity: 0; }
   to {
     left: 0;
-    opacity: 1; } }
-@-webkit-keyframes fadeIn {
-  from {
-    opacity: 0; }
-  to {
     opacity: 1; } }
 @keyframes fadeIn {
   from {
@@ -299,8 +287,8 @@
     width: 40px; }
     .portfolio-footer .portfolio-footer-social-media-icon:hover {
       background-color: #ff008c;
-      width: 40px;
-      height: 40px; }
+      height: 40px;
+      width: 40px; }
       .portfolio-footer .portfolio-footer-social-media-icon:hover:first-of-type {
         border-radius: 10px; }
   .portfolio-footer .portfolio-footer-email {
