--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -76,6 +76,30 @@
       border-bottom: solid 6px #ff008c;
       color: #ff008c; }
 
+/* ccn page styles */
+.portfolio-ccn-body {
+  margin: 50px 10%; }
+  .portfolio-ccn-body .portfolio-ccn-title {
+    font-size: 24px;
+    font-weight: 700;
+    margin-bottom: 30px; }
+  .portfolio-ccn-body .portfolio-ccn-row {
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: flex;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    -moz-flex-direction: row;
+    flex-direction: row;
+    margin-bottom: 30px; }
+  .portfolio-ccn-body .portfolio-ccn-header {
+    font-size: 20px;
+    font-weight: 700;
+    margin-right: 10%;
+    min-width: 200px; }
+
+/* end ccn page styles */
 .portfolio-row {
   display: -ms-flexbox;
   display: -webkit-flex;
