--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -76,6 +76,42 @@
       border-bottom: solid 6px #ff008c;
       color: #ff008c; }
 
+/* process page styles */
+.portfolio-process-body {
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: flex;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  -moz-flex-direction: column;
+  flex-direction: column;
+  margin: 50px 10%; }
+  .portfolio-process-body .portfolio-process-title {
+    font-size: 24px;
+    font-weight: 700;
+    margin-bottom: 25px; }
+  .portfolio-process-body .portfolio-process-row {
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: flex;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    -moz-flex-direction: row;
+    flex-direction: row;
+    margin-bottom: 25px; }
+  .portfolio-process-body .portfolio-process-column {
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: flex;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    -moz-flex-direction: column;
+    flex-direction: column; }
+
+/* end process page styles */
 /* ccn page styles */
 .portfolio-ccn-body {
   margin: 50px 10%; }
@@ -103,12 +139,20 @@
   .portfolio-ccn-body .portfolio-ccn-header {
     font-size: 20px;
     font-weight: 700;
+    left: 15px;
     margin-right: 10%;
-    min-width: 200px; }
+    min-width: 200px;
+    position: absolute;
+    top: 15px;
+    z-index: 1; }
   .portfolio-ccn-body .portfolio-ccn-column:first-of-type {
-    margin-right: 5%; }
+    margin-right: 5%;
+    position: relative; }
   .portfolio-ccn-body .portfolio-ccn-design-img {
-    width: 250px; }
+    border: 3px solid #000000;
+    opacity: 0.4;
+    width: 250px;
+    z-index: -1; }
   .portfolio-ccn-body .portfolio-ccn-blurb:first-of-type {
     margin-bottom: 15px; }
 
