--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -110,9 +110,12 @@
     margin-bottom: 15px; }
   .portfolio-process-body .portfolio-process-blurb-intro {
     font-size: 16px;
-    max-width: 680px; }
-    .portfolio-process-body .portfolio-process-blurb-intro:first-of-type {
-      margin-bottom: 20px; }
+    max-width: 665px;
+    text-align: center; }
+  .portfolio-process-body .portfolio-process-intro-emphasis {
+    font-size: 18px;
+    font-weight: 700;
+    margin-top: 10px; }
   .portfolio-process-body .portfolio-process-row {
     display: -ms-flexbox;
     display: -webkit-flex;
