--- a/scss/stylesheet.scss
+++ b/scss/stylesheet.scss
@@ -125,10 +125,13 @@
     }
     .portfolio-process-blurb-intro {
         font-size: 16px;
-        max-width: 680px;
-        &:first-of-type{
-            margin-bottom: 20px;
-        }
+        max-width: 665px;
+        text-align: center;
+    }
+    .portfolio-process-intro-emphasis {
+        font-size: 18px;
+        font-weight: 700;
+        margin-top: 10px;
     }
     .portfolio-process-row {
         @include flex;
