--- a/scss/stylesheet.scss
+++ b/scss/stylesheet.scss
@@ -113,25 +113,30 @@
         @include flex-direction(column);
         @include flex-align-items(center);
         background-color: #1f1f1f;
-        border-bottom: solid 3px #0062ff;
+        border-bottom: solid 3px #b0e9f7;
         color: #eaeaea;
         margin-bottom: 50px;
         padding: 50px 10%;
     }
     .portfolio-process-title {
-        color: #ff008c;
-        font-size: 24px;
-        margin-bottom: 15px;
+            font-size: 30px;
+            font-weight: 700;
+            margin-bottom: 15px;
+            text-align: center;
+    }
+    .portfolio-process-title-emphasis {
+            color: #ff008c;
+            font-weight: 300;
     }
     .portfolio-process-blurb-intro {
-        font-size: 16px;
-        max-width: 665px;
+        font-size: 18px;
+        max-width: 735px;
         text-align: center;
     }
     .portfolio-process-intro-emphasis {
-        font-size: 18px;
+        font-size: 22px;
         font-weight: 700;
-        margin-top: 10px;
+        margin-top: 15px;
     }
     .portfolio-process-row {
         @include flex;
@@ -181,11 +186,48 @@
 /* ccn page styles */
 
 .portfolio-ccn-body {
-    margin: 50px 10%;
+    @include flex;
+    @include flex-direction(column);
+    .portfolio-ccn-intro {
+        @include flex;
+        @include flex-direction(column);
+        background-color: #1f1f1f;
+        color: #eaeaea;
+        padding: 50px 10%;
+    }
     .portfolio-ccn-title {
-        font-size: 24px;
+        font-size: 30px;
         font-weight: 700;
-        margin-bottom: 30px;
+        margin-bottom: 15px;
+        text-align: center;
+    }
+    .portfolio-ccn-title-emphasis {
+        color: #ff008c;
+        font-weight: 300;
+    }
+    .portfolio-ccn-intro-blurb {
+        @include flex;
+        @include flex-align-self(center);
+        font-size: 18px;
+        max-width: 700px;
+        text-align: center;
+    }
+    .portfolio-ccn-link {
+        background-color: #1b1464;
+        padding: 50px 10%;
+        .portfolio-ccn-screenshot {
+            @include flex;
+            border: solid 3px #ffffff;
+            cursor: pointer;
+            max-width: 800px;
+            margin: 0 auto;
+            opacity: 1;
+            transition: ease-out 0.3s;
+            width: 100%;
+            &:hover {
+                opacity: 0.5;
+            }
+        }
     }
     .portfolio-ccn-row {
         @include flex;
@@ -195,7 +237,7 @@
     .portfolio-ccn-intro-header {
         font-size: 20px;
         font-weight: 700;
-        margin-right: 10%;
+        margin-right: 5%;
         min-width: 200px;
     }
     .portfolio-ccn-intro-column {
@@ -204,24 +246,13 @@
     .portfolio-ccn-header {
         font-size: 20px;
         font-weight: 700;
-        left: 15px;
         margin-right: 10%;
         min-width: 200px;
-        position: absolute;
-        top: 15px;
-        z-index: 1;
     }
     .portfolio-ccn-column {
         &:first-of-type {
             margin-right: 5%;
-            position: relative;
         }
-    }
-    .portfolio-ccn-design-img {
-        border: 3px solid #000000;
-        opacity: 0.4;
-        width: 250px;
-        z-index: -1;
     }
     .portfolio-ccn-blurb {
         &:first-of-type {
